@@ -47,6 +47,7 @@ version ? (??/??/????):
   - BTS#0000450: fixed %DNS2 in lms-mgc (alec)
   - cash receipts in pdf (alec)
   - added public address for network devices IPs (alec)
+  - added customer's traffic raport - Stats -> Printing (alec)
     
 version 1.7.2 Doci (2005-08-13):
 
